# ai-tooling-resources

./: .gitignore  .prettierrc.json  AGENTS.md  CLAUDE.md  GUIDE_ROUTER.md  INDEX.md  README.md  pyproject.toml
config/: tool-mappings.json
examples/: complete-workflow-example.md
guides/development/: code-review-refactoring.md  codebase-exploration.md  error-handling-debugging.md
guides/planning/: planning-documentation.md
guides/testing/: test-writing-guide.md
guides/workflows/: feature-development-workflow.md
scripts/: bootstrap.sh  install.sh  update.sh
src/ai_tooling/: __init__.py  cli.py  install.py  update.py  utils.py
templates/: AGENTS.md  FEATURE.md  GLOBAL.md  PROJECT.md  bug-fix-plan-template.md  exploration-notes-template.md  feature-plan-template.md  refactoring-plan-template.md
tests/: test_utils.py
